<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/bottom_nav_map_text"/>
    <item
        android:id="@+id/bottom_nav_list"
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="@string/bottom_nav_list_text"/>
    <item
        android:id="@+id/bottom_nav_favorites"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/bottom_nav_favorites_text"/>
    <item
        android:id="@+id/bottom_nav_prayers"
        android:icon="@drawable/ic_baseline_text_snippet_24"
        android:title="@string/bottom_nav_prayers_text"/>
    <item
        android:id="@+id/bottom_nav_calendar"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/bottom_nav_calendar_text"/>
</menu>